mlflow/base/service.yaml
# manifests/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-db-service
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  selector:
    app: mlflow
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
